# KPM

./: .gitignore  DEVELOPMENT.md  Doxyfile  Package.md  README.md  Repository.md  TODO.md  example_local_package_manifest.json  example_local_repos_manifest.json  example_package_manifest.json  example_repo_manifest.json  fbink_manifest.json  gen_crosscompile.sh  kpbuild.py  kpg.md  kpg.py  kpm-helper.py  kprepoman.py  krm.md  krm.py  meson.build  meson.options  meson_options.txt  paths.md  repo_test.db  test.sh
.github/workflows/: main.yml
cli/: README.md  internal_utils.c  io.c  logging.c  main.c  meson.build
cli/include/: cli.h  internal_utils.h  io.h  logging.h
docs/html/: annotated.html  annotated_dup.js  classKPM-members.html  classKPM.html  classSemVer-members.html  classSemVer.html  classSimpleGET-members.html  classSimpleGET.html  classes.html  config_8h_source.html  dir_3991a18de3a76ac822c0f2b9ae3048c2.html  dir_3991a18de3a76ac822c0f2b9ae3048c2.js  dir_4264a7d7fd7f5693b50968566ab57a77.html  dir_4264a7d7fd7f5693b50968566ab57a77.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_80c3527ec3cf0f3483e12c0fcf6ceee3.html  dir_99d2dc560f84dde124e930de108007a7.html  dir_99d2dc560f84dde124e930de108007a7.js  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  dir_b16c5d04ca4ed789efad286b92689aca.html  dir_b16c5d04ca4ed789efad286b92689aca.js  dir_e409cfdac74361683505b3809167d1bd.html  dir_e409cfdac74361683505b3809167d1bd.js  dir_f775447ac819b30a1cb994c55bc246a2.html  dir_f8c2cbfb9d43e4d1eec0ae4a05af4227.html  dir_f8c2cbfb9d43e4d1eec0ae4a05af4227.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_enum.html  index.html  kpm_8h.html  kpm_8h.js  kpm_8h_source.html  lab126utils_8h_source.html  md_Package.html  (+29 more)
docs/html/search/: all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  pages_0.js  pages_1.js  pages_4.js  pages_6.js  pages_a.js  pages_b.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_7.js  variables_8.js
docs/latex/: annotated.tex  classKPM.tex  classSemVer.tex  classSimpleGET.tex  config_8h_source.tex  files.tex  kpm_8h.tex  kpm_8h_source.tex  lab126utils_8h_source.tex  md_Package.tex  md_README.tex  md_Repository.tex  refman.tex  semver_8h_source.tex  simpleGET_8h_source.tex  structDependency.tex  structIndexedArtifact.tex  structIndexedArtifactDependency.tex  structIndexedPackage.tex  structIndexedRepository.tex  structInstalledPackage.tex  structRepository.tex
example_repo/: manifest.json
examples/examplepackage/: install.sh  manifest.json  uninstall.sh
examples/examplepackage/payload/: test.sh
examples/examplerepo/: manifest.json
package/: install.sh  manifest.json
package-compat/: manifest.json
src/: artifacts.c  callback.c  curl_compat.cpp  database.cpp  dependencies.c  device.c  flags.cpp  index.c  install.c  installed_packages.c  internal_utils.c  kpm.c  kpm.cpp  meson.build  multiDownload.cpp  package.c  package.cpp  repositories.cpp  repository.c  repository.cpp  request.cpp  simpleGET.c  simpleGET.cpp  uninstall.c  utils.c  utils.cpp
src/include/: callback.h  dependencies.h  devices.h  install.h  internal_utils.h  kpm.h  kpm.hpp  package.h  semver.h  simpleGET.h  simpleGET.hpp  uninstall.h
src/include/kpm/: kpm.h  kpm.hpp  semver.h  semver.hpp
src/include/repo/: artifact.h  repo.h  repo_package.h
src/includes/: curl_compat.h  database.h  database.hpp  flags.h  flags.hpp  log.h  log.hpp  multiDownload.hpp  repositories.h  repositories.hpp  request.h  utils.hpp
stubs/: meson.build
stubs/lab126utils/: lab126utils.c  lab126utils.cpp  lab126utils.h
subprojects/: fbink.wrap
subprojects/libarchive-3.7.7/: .meson-subproject-wrap-hash.txt
subprojects/sqlite-amalgamation-3470200/: .meson-subproject-wrap-hash.txt
subprojects/sqlite-amalgamation-3480000/: .meson-subproject-wrap-hash.txt
test_package/: install.sh  manifest.json
tests/: add_repository_test.c  database_test.cpp  db_test.c  db_test.cpp  dependency_graph_generation_test.c  dependency_graph_resolution_test.c  graph_test.c  index_test.c  index_test_empty.c  install_package_test.c  install_string_test.c  internal_getdependencies_localfile_test.c  meson.build  multiDownload_test.cpp  remove_repository_test.c  repository_test.c  repository_test.cpp  search_test.c  utils_test.cpp
