lab126utils = library(
    'lab126utils',
    'lab126utils/lab126utils.cpp',
    include_directories: ['lab126utils/'],
    name_prefix: 'lib',
    dependencies: [],
)

lab126utils_dep = declare_dependency(
    link_with: lab126utils,
    include_directories: ['lab126utils/'],
    dependencies: []
)